crates/analyzer/tests/snapshots/errors__missing_return.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: function body is missing a return or revert statement
  ┌─ compile_errors/missing_return.fe:4:12
  │
4 │     pub fn bar(self) -> u256 {
  │            ^^^          ---- expected function to return `u256`
  │            │             
  │            all paths of this function must `return` or `revert`

error: cannot modify `self.baz`, as it is not mutable
  ┌─ compile_errors/missing_return.fe:5:9
  │
4 │     pub fn bar(self) -> u256 {
  │                ---- consider changing this to be mutable: `mut self`
5 │         self.baz[0] = 1
  │         ^^^^^^^^ not mutable


